--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "classnames": "^2.3.1",
+    "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test-server": "npx json-server --watch public/db.json --port=3003"
   },
   "eslintConfig": {
     "extends": [
